K8s/Volume/service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    run: frontend
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
      protocol: TCP
  selector:
    app: frontend

# minikube service frontend
